# cinfo

./: AUTHORS  BUGS+TODO  CREDITS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  acconfig.h  cinfo.c  config.h.in  configure  configure.in  getopt.c
