# Process this file with autoconf to produce a configure script.


AC_INIT(cinfo.c)
AM_INIT_AUTOMAKE(cinfo, 0.1)
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_MAKE_SET

CPPFLAGS="$CPPFLAGS -I/usr/local/include/"
LIBS="-L/usr/local/lib"

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([errno.h unistd.h getopt.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T

#AC_SEARCH_LIBS(getopt_long, [gnugetopt iberty],,echo GNU getopt not found. Please install it first \(for BSD /usr/ports/devel/libgnugetopt\); exit)
AC_SEARCH_LIBS(getopt_long, [gnugetopt iberty],,AC_DEFINE(NEED_GETOPT))


# Checks for library functions.
#AC_FUNC_STAT
AC_CHECK_FUNCS([strerror mincore])
AC_OUTPUT([Makefile])
